--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,3 +1,4 @@
-* 大きなテキストサイズに対するサポート機能が向上しました。
-* ユーザーによってオーダーリストが読み込まれないバグが修正されました。
-* iOS 12.0以降をサポートするようアプリを更新しました。
+* 配送状況の追跡プラグインを使用しますか ?配送状況の追跡を注文に手動で追加できるようになりました。
+* ストアのトップパフォーマーを表示しようとすると、アプリ側の性能不足で「コンテンツを読み込めませんでした」というエラーが発生することがありました。この問題は修正されました。
+* Store Picker を使用しようとしてログインしても続行できない、という問題も修正されました。
+* ネットワーク接続が遅い場合、アプリがクラッシュすることがありましたが、現在は Wi-Fi によってビジネスの管理がスムーズにになったため、クラッシュは起こらなくなりました。
