--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,3 +1,4 @@
-* Улучшена поддержка больших объемов текста.
-* Исправлена ошибка загрузки списка заказов у некоторых пользователей.
-* Обновлено приложение, добавлена поддержка iOS 12.0 и более поздних версий.
+* Вы используете плагин "Отслеживание доставки"? Теперь вы можете самостоятельно настраивать отслеживание доставки заказов.
+* Раньше при открытии раздела "Самые продаваемые" в вашем магазине иногда появлялась ошибка “Невозможно загрузить содержимое”, которая иронически указывала на то, что само наше приложение не имело шансов попасть в такую категорию. Теперь эта проблема в прошлом.
+* Если вы когда-либо пробовали воспользоваться средством "Выбор магазина", но не могли продолжить работу после входа, то можете больше об этом не беспокоиться.
+* Иногда приложение давало сбой при медленном интернет-соединении. Теперь такого не бывает, потому что слабый WiFi бизнесу не помеха.
