--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,3 +1,4 @@
-* A compatibilidade com tamanhos maiores de texto foi aprimorada.
-* O bug em que a Lista de pedidos não era carregada para alguns usuários foi corrigido.
-* O aplicativo foi atualizado para ser compatível com a versão iOS 12.0 e superior.
+* Do you use the Shipment Tracking plugin? Now you can manually add shipment tracking to orders.
+* Sometimes when you’d try to view your store’s Top Performers you’d get an “Unable to load content” error, which was an ironic lack of top performance on the app’s part. That’s fixed now.
+* If you ever tried to use the Store Picker but weren’t able to continue after logging in, that’s fixed too.
+* Occasionally, the app would crash when it had a slow network connection. Now it doesn’t, because iffy wifi should never stop you from managing your business.
