--- a/WooCommerce/Resources/en.lproj/Localizable.strings
+++ b/WooCommerce/Resources/en.lproj/Localizable.strings
@@ -32,6 +32,9 @@
 /* Accessibility label for the 'Add a note' button */
 "Add a note button" = "Add a note button";
 
+/* Accessibility label for the 'Add a tracking' button */
+"Add a tracking button" = "Add a tracking button";
+
 /* Add Tracking row label
    Add tracking screen - title. */
 "Add Tracking" = "Add Tracking";
@@ -51,6 +54,9 @@
 
 /* Mark all notifications as read notice */
 "All notifications marked as read" = "All notifications marked as read";
+
+/* Backorders status. Example: 'Backorders: allowed' */
+"allowed" = "allowed";
 
 /* Instructions for users with two-factor authentication enabled. */
 "Almost there! Please enter the verification code from your authenticator app." = "Almost there! Please enter the verification code from your authenticator app.";
@@ -108,6 +114,9 @@
 
 /* Application's Background State */
 "Background" = "Background";
+
+/* A descriptive label prefix. Example: 'Backorders: not allowed' */
+"Backorders:" = "Backorders:";
 
 /* VoiceOver accessibility value, informs the user about a specific bar in the revenue chart. It reads: Bar number {bar number} {summary of bar}. */
 "Bar number %i, %@, " = "Bar number %1$i, %2$@, ";
@@ -186,7 +195,7 @@
 "Couldn't connect. Required XML-RPC methods are missing on the server." = "Couldn't connect. Required XML-RPC methods are missing on the server.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 403 error, meaning that the access to the /xmlrpc.php file is forbidden. */
-"Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. We received a 403 error when trying to access your site's XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem.";
+"Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. We received a 403 error when trying to access your site XMLRPC endpoint. The app needs that in order to communicate with your site. Contact your host to solve this problem.";
 
 /* Message to show to user when he tries to add a self-hosted site but the host returned a 405 error, meaning that the host is blocking POST requests on /xmlrpc.php file. */
 "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem." = "Couldn't connect. Your host is blocking POST requests, and the app needs that in order to communicate with your site. Contact your host to solve this problem.";
@@ -289,9 +298,6 @@
 /* Message to show to user when he tries to add a self-hosted site that is an empty URL. */
 "Empty URL" = "Empty URL";
 
-/* Error message shown when a URL is invalid. */
-"Enter a valid URL eg. example.com." = "Enter a valid URL eg. example.com.";
-
 /* Add custom shipping provider. Placeholder of cell presenting provider name */
 "Enter provider name" = "Enter provider name";
 
@@ -315,7 +321,7 @@
 "Enter your password instead." = "Enter your password instead.";
 
 /* Site Address placeholder */
-"example.com" = "example.com";
+"example.wordpress.com" = "example.wordpress.com";
 
 /* Error message to show when wrong URL format is used to access the REST API */
 "Failed to serialize request to the REST API." = "Failed to serialize request to the REST API.";
@@ -372,11 +378,17 @@
 /* Footer text to hide the billing cell */
 "Hide billing" = "Hide billing";
 
+/* Error message shown a URL does not point to an existing site. */
+"Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again." = "Hmm, it doesn't look like there's a WordPress site at this URL. Double-check the spelling and try again.";
+
 /* My Store > Settings > Help & Support section title */
 "HOW CAN WE HELP?" = "HOW CAN WE HELP?";
 
 /* Detail label for yes/no switch. */
 "If disabled the note will be private" = "If disabled the note will be private";
+
+/* Display label for the product's inventory stock status */
+"In stock" = "In stock";
 
 /* Application's Inactive State */
 "Inactive" = "Inactive";
@@ -407,6 +419,10 @@
 
 /* No comment provided by engineer. */
 "Invalid username" = "Invalid username";
+
+/* Product Details - inventory section title
+   Product Details > Pricing & Inventory > Inventory cell title - Product Details > Pricing and Inventory section > descriptive label for the Inventory cell. */
+"Inventory" = "Inventory";
 
 /* An error message shown during log in when the username or password is incorrect. */
 "It looks like this username/password isn't associated with this site." = "It looks like this username/password isn't associated with this site.";
@@ -564,6 +580,9 @@
 /* Empty state for the list of shipment providers. It reads: 'No results for DHL. Add a custom provider' */
 "No results found for \(term)\nAdd a custom provider" = "No results found for \(term)\nAdd a custom provider";
 
+/* Backorders status. Example: 'Backorders: not allowed' */
+"not allowed" = "not allowed";
+
 /* Order details > tracking.  This is where the shipping date would normally display. */
 "Not shipped yet" = "Not shipped yet";
 
@@ -602,6 +621,9 @@
 
 /* Spoken label to indicate switch control is turned on */
 "On" = "On";
+
+/* Display label for the product's inventory stock status */
+"On back order" = "On back order";
 
 /* Opens iOS's Device Settings for the app */
 "Open Device Settings" = "Open Device Settings";
@@ -646,6 +668,9 @@
 
 /* My Store > Settings > Other app section */
 "Other" = "Other";
+
+/* Display label for the product's inventory stock status */
+"Out of stock" = "Out of stock";
 
 /* Login dialog password placeholder
    Password placeholder */
@@ -695,6 +720,12 @@
 
 /* Message to ask the user to check their email and look for a WordPress.com email. */
 "Please open your email app and look for an email from WordPress.com." = "Please open your email app and look for an email from WordPress.com.";
+
+/* Product Details > Pricing and Inventory section > descriptive label for the Price cell. */
+"Price" = "Price";
+
+/* Product Details - pricing and inventory section title */
+"Pricing and Inventory" = "Pricing and Inventory";
 
 /* Opens the Privacy Policy web page */
 "Privacy Policy" = "Privacy Policy";
@@ -748,6 +779,9 @@
 /* Describes a domain that was registered with WordPress.com */
 "Registered Domain" = "Registered Domain";
 
+/* A descriptive label prefix. Example: 'Regular price: $20.00' */
+"Regular price:" = "Regular price:";
+
 /* Action: Opens the Store in a browser
    Action: removes the current filters from the notifications list */
 "Remove Filters" = "Remove Filters";
@@ -777,6 +811,9 @@
 /* Name of the Reviews filter on the Notifications screen - it means only review notifications will be displayed. Plural form of the word Review.
    Reviews descriptive label */
 "Reviews" = "Reviews";
+
+/* A descriptive label prefix. Example: 'Sale price: $18.00' */
+"Sale price:" = "Sale price:";
 
 /* Orders Search Placeholder */
 "Search all orders" = "Search all orders";
@@ -849,7 +886,11 @@
 /* Describes a site redirect domain */
 "Site Redirect" = "Site Redirect";
 
-/* SKU label */
+/* A descriptive title for the SKU cell in Product Details > Inventory, for Grouped products. */
+"SKU" = "SKU";
+
+/* A descriptive label for the SKU prefix. Example: 'SKU: woo-affiliate-beanie'
+   A descriptive label prefix. Example: 'SKU: woo-virtual-beanie' - SKU label */
 "SKU:" = "SKU:";
 
 /* One Time Code has been sent via SMS */
@@ -908,6 +949,12 @@
 
 /* VoiceOver accessibility value, informs the user about the X-axis min/max values. It reads: Starting date {date}, ending date {date}. */
 "Starting period %@, ending period %@" = "Starting period %1$@, ending period %2$@";
+
+/* A descriptive label prefix. Example: 'Stock quantity: 19' */
+"Stock quantity:" = "Stock quantity:";
+
+/* A descriptive label prefix. Example: 'Stock status: In stock' */
+"Stock status:" = "Stock status:";
 
 /* VoiceOver accessibility label for the store revenue chart. */
 "Store revenue chart" = "Store revenue chart";
@@ -983,9 +1030,6 @@
 
 /* No comment provided by engineer. */
 "The site address must be shorter than 64 characters." = "The site address must be shorter than 64 characters.";
-
-/* Error message shown a URL does not point to an existing site. */
-"The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress." = "The site at this address is not a WordPress site. For us to connect to it, the site must use WordPress.";
 
 /* Message shown when site deletion API failed */
 "The site could not be deleted." = "The site could not be deleted.";
@@ -1164,9 +1208,6 @@
 
 /* Accessibility label for the button to update the order status in Order Details */
 "Update Order Status" = "Update Order Status";
-
-/* Order updated summary date. It reads: Updated {medium formatted date} at {short style time} */
-"Updated %@ at %@" = "Updated %1$@ at %2$@";
 
 /* Singular of 'hour' — date and time string that represents the time interval since last data update when exactly 1 hour ago. Usage example: Updated 1 hour ago */
 "Updated %ld hour ago" = "Updated %ld hour ago";
