Update release notes

--- a/WooCommerce/Resources/release_notes.txt
+++ b/WooCommerce/Resources/release_notes.txt
@@ -1,61 +1,4 @@
-2.0
------
-- bugfix: dates in the Order Details screen are now localised.
-- improvement: improved support for larger font sizes in the login screen
- 
-1.9
------
-- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
-- new feature: You can now manually add shipment tracking to an Order. This feature is for users who have the [Shipment Tracking plugin](https://woocommerce.com/products/shipment-tracking) installed.
-- bugfix: fixes Store Picker: some users are unable to continue after logging in.
-- bugfix: fixes a crash when the network connection is slow
- 
-1.8
------
-
-1.7.1
------
-- Fixed a bug where Order List did not load for some users.
-- update: this app supports iOS 12.0 and up.
-- improvement: improved support for large text sizes.
-- bugfix: fixes Order List not loading for some users.
-- bugfix: fixes "Unable to load content" error message when attempting to get Top Performers content.
- 
-1.7
------
-- improvement: you can now log in using a site address.
-
-1.6
------
-- improvement: Tracking numbers can now be copied to the pasteboard from the order details screen.
-
-1.5
------
-- bugfix: Sometimes Settings would style all the options like "Log Out". No longer happens now.
-- bugfix: order status refreshes upon pull-to-refresh in Order Details
-- bugfix: payment status label background color showing up beyond rounded border
-- improvement: change top performers text from "Total Product Order" to "Total orders" for clarity
-- bugfix: fixed an issue on the order details screen where the shipment tracking dates were incorrect
-
-1.4
------
-- bugfix: fix a crash happening on log out
-- new feature: Add shipment tracking to Order Details screen
-- improvement: The store switcher now allows you to go back to the previous screen without logging you out
-- improvement: Custom order status labels are now supported! Instead of just displaying the order status slug and capitalizing the slug, the custom order status label will now be fetched from the server and properly displayed.
-- improvement: Filtering by custom order status now supported!
-- new feature: You can now manually change the status of an order on the order details screen
-- bugfix: correctly flips chevron on Dashboard > New Orders, to support RTL languages.
-- bugfix: fixed an issue on the order details screen where the shipment tracking dates were incorrect
-
-1.3
------
-- bugfix: Allows for decimal quantities which some extensions have
-- new feature: quick site select. Navigate to Settings > select row with store website.
-- improvement: Updated the colors of the bars in the charts for better readability
-- improvement: Present an error message with an option to retry when adding a note to an order fails
-- improvement: Present an error message with an option to retry when fulfilling an order fails
-- bugfix: Log out of the current account right after selecting "Try another account" in store picker
-- improvement: Use the store name for the title of the view in "My store" tab
-- improvement: Add an alert to let the user know about our new store switcher
-- improvement: Display Address in Order Details screen unless every field is empty
+* Do you use the Shipment Tracking plugin? Now you can manually add shipment tracking to orders.
+* Sometimes when you’d try to view your store’s Top Performers you’d get an “Unable to load content” error, which was an ironic lack of top performance on the app’s part. That’s fixed now.
+* If you ever tried to use the Store Picker but weren’t able to continue after logging in, that’s fixed too.
+* Occasionally, the app would crash when it had a slow network connection. Now it doesn’t, because iffy wifi should never stop you from managing your business.
